--- a/T1/Curso HTML/sitejoao/css/site.css
+++ b/T1/Curso HTML/sitejoao/css/site.css
@@ -23,14 +23,6 @@ p {
 	margin: 20px 0;
 }
 
-.citacao-bio {
-	background-color: #D9E5E3;
-	border: 10px solid #C2CCCA;
-	width: 250px;
-	box-sizing: border-box;
-	margin: 20px 40px;
-}
-
 .navegacao-site {
 	text-align: center;
 	background-color: #3C1D3D;
@@ -40,6 +32,11 @@ p {
 .rodape-pagina {
 	background-color: #000;
 	color: #F2FFFC;
+    clear: both;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
 
 main a {
@@ -51,7 +48,7 @@ main a {
 	font-family: "Open Sans Condensed", sans-serif;
 }
 
-.citacao-bio, .navegacao-site, .rodape-pagina {
+.citacao-fiat, .citacao-petrobras, .navegacao-site, .rodape-pagina {
     padding: 20px;
 }
 
@@ -76,38 +73,54 @@ em {
 
 .subtitulo-texto {
 	font-size: 30px;
+    clear: both;
 }
 
 .icones-redes-sociais li {
 	display: inline-block;
 }
 
-.artigo {
-	padding-bottom: 30px;
-	border-bottom: 1px solid #ccc;
-	margin-bottom: 20px;
-}
-
-.leia-mais {
-	padding: 8px;
-	margin: 16px;
-	display: block;
-	font-size: 24px;
-	text-align: center;
-	background-color: #E6E7E8;
-}
 .icones-redes-sociais a {
     width: 40px;
     height: 40px;
     display: block;
     text-indent: -9999px;
 }
+
 .icone-github {
-    background-image: url(github.png);
+    background-image: url(img/github.png);
 }
+
 .icone-twitter{
-    background-image: url(twitter.png);
+    background-image: url(img/twitter.png);
 }
+
 .icone-linkedin{
-    background-image: url(linkedin.png);
+    background-image: url(img/linkedin.png);
+}
+
+.minha-foto{
+    float: right;
+}
+main{
+    float: left;
+    width: 85%;
+    padding-bottom: 80px;
+}
+.minha-foto, .navegacao-site {
+    float: right;
+    box-sizing: border-box;
+    border-left: 10px solid black;
+    border-bottom: 10px solid black;
+}
+
+.minha-foto{
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+.navegacao-site{
+    width: 15%;
+    position: relative;
+    top: 310px;
 }
