ASP.NET - Projeto Novo com connection string benner

--- a/T1/Curso ASP.NET/CaelumEstoque/CaelumEstoque/Views/Produto/Index.cshtml
+++ b/T1/Curso ASP.NET/CaelumEstoque/CaelumEstoque/Views/Produto/Index.cshtml
@@ -21,7 +21,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var produto in ViewBag.Produtos)
+                @foreach (var produto in ViewBag.produtos)
                 {
                     <tr>
                         <td>@produto.Id</td>
