--- a/T1/Curso ASP.NET/CaelumEstoque/CaelumEstoque/Views/Produto/Index.cshtml
+++ b/T1/Curso ASP.NET/CaelumEstoque/CaelumEstoque/Views/Produto/Index.cshtml
@@ -1,36 +1,24 @@
-﻿
-@{
-    Layout = null;
-}
+﻿@model IList<CaelumEstoque.Models.Produto>
 
-<!DOCTYPE html>
+        <table class="table table-hover">
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <div> 
-        <table>
             <thead>
                 <tr>
                     <th>Id</th>
-                    <th>Nome</th>
-                    <th>Quantidade</th>
+                    <th>Nome do Produto</th>
+                    <th>Preco</th>
                 </tr>
             </thead>
             <tbody>
-                @foreach (var produto in ViewBag.produtos)
+                @foreach (var produto in Model)
                 {
                     <tr>
                         <td>@produto.Id</td>
-                        <td>@produto.Nome</td>
-                        <td>@produto.Quantidade</td>
+                        <td>
+                            @Html.RouteLink(produto.Nome, "VisualizaProduto", new { id = produto.Id })
+                        </td>
+                        <td>@produto.Preco</td>
                     </tr>
                 }
             </tbody>
         </table>
-    </div>
-</body>
-</html>
