--- a/T1/Curso ASP.NET/CaelumEstoque/CaelumEstoque/Views/Categoria/Form.cshtml
+++ b/T1/Curso ASP.NET/CaelumEstoque/CaelumEstoque/Views/Categoria/Form.cshtml
@@ -1,9 +1,9 @@
 ﻿    <form action="/Categoria/Adiciona" method="post">
         <label for="nome">Nome:</label>
-        <input name="categoria.Nome" id="nome" />
+        <input name="categoria.Nome" id="nome" class="form-control" />
 
         <label for="descricao">Descrição:</label>
-        <input name="categoria.Descricao" id="descricao" />
+        <input name="categoria.Descricao" id="descricao" class="form-control" />
 
         <input type="submit" value="Cadastrar" />
     </form>
