--- a/T1/Curso ASP.NET/CaelumEstoque/CaelumEstoque/Views/Produto/Form.cshtml
+++ b/T1/Curso ASP.NET/CaelumEstoque/CaelumEstoque/Views/Produto/Form.cshtml
@@ -1,26 +1,32 @@
 ﻿<!DOCTYPE html>
 
-    <form action="/Produto/Adiciona" method="post">
-        @Html.ValidationMessage("produto.Nome")
-        <label for="nome">Nome:</label>
-        <input id="nome" name="produto.Nome" value="@ViewBag.Produto.Nome" class="form-control" />
+<form action="/Produto/Adiciona" method="post">
+    @Html.AntiForgeryToken()
 
-        <label for="quantidade">Quantidade:</label>
-        <input id="quantidade" name="produto.Quantidade" value="@ViewBag.Produto.Quantidade" class="form-control" />
+    <label for="nome">Nome:</label>
+    <input id="nome" name="produto.Nome" value="@ViewBag.Produto.Nome" class="form-control" />
+    @Html.ValidationMessage("produto.Nome")
 
-        <label for="descricao">Descrição:</label>
-        <input id="descricao" name="produto.Descricao" value="@ViewBag.Produto.Descricao" class="form-control" />
+    <label for="quantidade">Quantidade:</label>
+    <input id="quantidade" name="produto.Quantidade" value="@ViewBag.Produto.Quantidade" class="form-control" />
+    @Html.ValidationMessage("produto.Quantidade")
 
-        <label for="preco">Preço:</label>
-        <input id="preco" name="produto.Preco" value="@ViewBag.Produto.Preco" class="form-control" />
+    <label for="descricao">Descrição:</label>
+    <input id="descricao" name="produto.Descricao" value="@ViewBag.Produto.Descricao" class="form-control" />
+    @Html.ValidationMessage("produto.Descricao")
 
-        <label for="categoria">Categoria:</label>
-        <select id="categoria" name="produto.CategoriaId" class="form-control">
-            @foreach (var c in ViewBag.Categorias)
-            {
-                <option value="@c.Id" selected="@c.Id.Equals(ViewBag.Produto.CategoriaId)">@c.Nome</option>
-            }
-        </select>
+    <label for="preco">Preço:</label>
+    <input id="preco" name="produto.Preco" value="@ViewBag.Produto.Preco" class="form-control" />
+    @Html.ValidationMessage("produto.Preco")
 
-        <input type="submit" value="Cadastrar" />
-    </form>
+    <label for="categoria">Categoria:</label>
+    <select id="categoria" name="produto.CategoriaId" class="form-control">
+        @foreach (var c in ViewBag.Categorias)
+        {
+            <option value="@c.Id" selected="@c.Id.Equals(ViewBag.Produto.CategoriaId)">@c.Nome</option>
+        }
+    </select>
+    @Html.ValidationMessage("produto.Categoria")
+
+    <input type="submit" value="Cadastrar" />
+</form>
