--- a/T3/JQuery/alura-typer/public/css/estilos.css
+++ b/T3/JQuery/alura-typer/public/css/estilos.css
@@ -24,3 +24,24 @@
 .borda-verde{
   border: 3px solid green;
 }
+
+.placar{
+  display: none;
+}
+
+body{
+  overflow: scroll;
+}
+
+#erro{
+  color: red;
+  display: none;
+}
+
+#spinner{
+  display: none;
+}
+
+#frase-id{
+  width: 40px;
+}
